--- a/css/styles.css
+++ b/css/styles.css
@@ -293,12 +293,13 @@ a {
 }
 
 .member-img {
-    margin-bottom:30px;
+
 }
 
 
 .members-div-text{
-    padding-bottom: 30px;
+    padding: 30px;
+
 }
 
 
@@ -322,7 +323,6 @@ a {
     display: flex;
     width: 100%;
     justify-content: space-between;
-    padding: 0 32px;
     margin-top: 16px;
 }
 
