--- a/css/styles.css
+++ b/css/styles.css
@@ -509,6 +509,8 @@ a.social-links-icons:focus {
     position: absolute;
     top: 0;
     left: 0;
+    width:100%;
+    height: 100%;
     transform: translateY(101%);
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 250ms;
