--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,8 @@ img {
 }
 
 
+/* header*/
+
 .header {
     height: 80px;
     display: flex;
@@ -173,6 +175,9 @@ img {
     letter-spacing: 0.03em;
 }
 
+/* business */
+
+
 
 .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.40), rgba(47, 48, 58, 0.40)), url("../images/business.jpg");
@@ -218,6 +223,14 @@ img {
     background-color: var(--light_blue);
 }
 
+
+
+
+/* +/detail */
+
+
+
+
 .detail {
     padding-top: 94px;
     padding-bottom: 94px;
@@ -259,6 +272,8 @@ img {
     letter-spacing: 0.03em;
 }
 
+
+/* work */
 
 .work {
     text-align: center;
@@ -307,6 +322,9 @@ img {
     word-wrap: break-word;
 }
 
+
+/* team */
+
 .team {
     background: var(--like_white);
     text-align: center;
@@ -332,6 +350,10 @@ img {
     flex-wrap: nowrap;
 
 }
+
+
+/* members */
+
 
 
 .members {
@@ -394,6 +416,10 @@ a.social-links-icons:focus {
     outline: none;
 }
 
+
+
+/*clients */
+
 .clients{
     text-align: center;
     padding: 94px;
@@ -435,6 +461,10 @@ a.social-links-icons:focus {
     transition: fill 300ms ease-in-out;
 }
 
+
+
+/* button list in portfolio*/
+
 .button_list {
     padding-top: 94px;
     margin-bottom: 50px;
@@ -463,7 +493,7 @@ a.social-links-icons:focus {
     }
 
 
-
+/* list of project in portfolio*/
 
 .project-list {
     list-style: none;
@@ -559,6 +589,9 @@ a.social-links-icons:focus {
 }
 
 
+/* footer */
+
+
 .footer {
     background-color: var(--footer_color);
 }
@@ -568,11 +601,9 @@ a.social-links-icons:focus {
     padding-top: 60px;
     padding-bottom: 60px;
     align-items: baseline;
+    gap:94px;
 }
 
-.footer-links-right {
-    margin-right: 70px;
-}
 
 .footer-logo {
     color: var(--blue);
@@ -603,7 +634,7 @@ a.social-links-icons:focus {
 }
 
 
-.footer-text-join{
+.footer-text{
     color: var(--white);
     font-weight: 700;
     letter-spacing: 0.03em;
@@ -659,6 +690,73 @@ a.social-links-icons:focus {
     }
 }
 
+
+
+.join {
+    flex-grow: 1;
+}
+
+.footer_box_second_plus_one {
+        display: flex;
+}
+.footer_input {
+    flex-grow: 1;
+    background: rgba(33, 150, 243, 0);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: 1px rgba(255, 255, 255, 0.3) solid;
+    padding: 16px 16px 16px 16px;
+
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+        }
+
+.footer_button {
+    background: var(--blue);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+    padding: 10px 28px;
+    margin-left: 12px;
+
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.875;
+    letter-spacing: 0.06em;
+    color: var(--white);
+    display: flex;
+    align-items: center;
+        }
+
+
+
+.footer_button_svg {
+    margin-left: 10px;
+    fill: currentColor;
+        }
+
+.footer_input:focus,
+.footer_input:hover {
+    outline-color: var(--blue);
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+    clip: rect(0, 0, 0, 0);
+    overflow: hidden;
+    }
+
+
+/* modal window*/
+
+
 .backdrop {
     position: fixed;
     top: 0;
@@ -677,24 +775,23 @@ a.social-links-icons:focus {
     pointer-events: none;
 }
 
-.modal {
+.modal-window {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-
+    padding: 40px;
     min-width: 528px;
-    min-height: 581px;
     background-color: var(--white);
     opacity: 1;
     border-radius: 4px;
-    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
+    0px 1px 3px 0px rgba(0, 0, 0, 0.12);
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal_button {
+.close-modal-button {
     display: flex;
     position: absolute;
     top: 8px;
@@ -708,9 +805,156 @@ a.social-links-icons:focus {
     cursor: pointer;
 }
 
-.modal_icon {
+.icon-modal {
     width: 18px;
     height: 18px;
     fill: var(--black);
+    transition: fill 0.5s;
 }
 
+.close-modal-button:hover .icon-modal,
+.close-modal-button:focus .icon-modal {
+    fill: var(--blue);
+}
+
+.form {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.form_title {
+    color: var(--black);
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 0.03em;
+
+    margin-bottom: 12px;
+}
+
+.label-text {
+    margin-bottom: 4px;
+}
+
+.form-li {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.form-input {
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    border: 1px #21212133 solid;
+    padding: 11px 0px 11px 30px;
+}
+
+.form_textarea {
+    height: 120px;
+    width: 100%;
+    border-radius: 4px;
+    border: 1px #21212133 solid;
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: 0.01em;
+    padding: 11px 12px;
+    resize: none;
+}
+
+.form-input:focus + .form-icon,
+.form-input:hover + .form-icon {
+    transition: 300ms;
+    color: var(--blue);
+}
+
+.form-input:hover,
+.form-input:focus,
+.form_textarea:hover,
+.form_textarea:focus {
+    outline: 1px var(--blue) solid;
+}
+
+.form-label {
+    color: var(--grey);
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: 0.01em;
+    margin-bottom: 10px;
+    position: relative;
+}
+
+.form-icon {
+    position: absolute;
+    color: var(--black);
+    left: 0;
+    margin-top: 11px;
+    margin-left: 12px;
+}
+
+.checkbox-div {
+    padding-top: 20px;
+    padding-bottom: 30px;
+    padding-left: 15px;
+    display: flex;
+    gap: 9px;
+}
+
+.form-a {
+    text-decoration: underline;
+    color: var(--blue);
+}
+
+.label_license {
+    cursor: pointer;
+    color: var(--grey);
+}
+
+input[type="checkbox"] {
+    appearance: none;
+    border: var(--black) 1px solid;
+    height: 15px;
+    width: 16px;
+    color: var(--white);
+    border-radius: 2px;
+    transition-duration: 0.5s;
+}
+
+input[type="checkbox"]:checked {
+    background: var(--blue);
+    border: none;
+    color: var(--white);
+}
+
+input[type="checkbox"]:checked::before {
+    content: "✔";
+    margin-left: 3px;
+    display: inline-block;
+    text-align: center;
+}
+
+.button-form-div {
+    display: inline-block;
+    text-align: center;
+}
+
+.form-button {
+    background: var(--blue);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+    width: 200px;
+    cursor: pointer;
+
+    padding: 10px 52px;
+
+    color: var(--white);
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.875;
+    letter-spacing: 0.06em;
+}
+
+.form-button:hover,
+.form-button:focus {
+    background: var(--light_blue);
+}
