--- a/src/scss/components/index/_modal.scss
+++ b/src/scss/components/index/_modal.scss
@@ -57,17 +57,17 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
 
-  .icon-modal {
-    width: 18px;
-    height: 18px;
-    fill: $black;
-    transition: fill 0.5s;
-
-    &:hover,
-    &:focus {
-      fill: $blue;
-    }
+  &:hover .icon-modal,
+  &:focus .icon-modal {
+    fill: $blue;
   }
+}
+
+.icon-modal {
+  width: 18px;
+  height: 18px;
+  fill: $black;
+  transition: fill 0.5s;
 }
 
 .form {
@@ -80,7 +80,7 @@
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 0.03em;
-    align-items: center;
+    text-align: center;
     margin-bottom: 12px;
   }
 
