--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -153,7 +153,7 @@ img {
 
 }
 
-.header_contacts_link{
+.header-contacts-link{
     display: flex;
     align-items: center;
 }
@@ -188,7 +188,7 @@ img {
     text-align: center;
 }
 
-.business-section-title {
+.hero-section-title {
     margin: auto;
     color: var(--white);
     text-align: center;
@@ -200,7 +200,7 @@ img {
     max-width: 696px;
 }
 
-.business-section-button {
+.hero-section-button {
     color: var(--white);
     border: none;
     font-size: 16px;
@@ -217,7 +217,7 @@ img {
 
 }
 
-.business-section-button:hover, .business-section-button:focus {
+.hero-section-button:hover, .hero-section-button:focus {
     background-color: var(--light_blue);
 }
 
@@ -350,18 +350,18 @@ img {
 }
 
 
-/* members */
+/* member */
 
 
 
-.members {
+.member {
     border-radius: 0px 0px 4px 4px;
     background: var(--white);
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
 
 }
 
-.members-div-text{
+.member-div-text{
     padding: 30px;
 
 }
@@ -383,19 +383,19 @@ img {
     letter-spacing: 0.03em;
 }
 
-.members-social-links{
+.member-social-links{
     display: flex;
     width: 100%;
     justify-content: space-between;
     margin-top: 16px;
 }
 
-.members-social-links li {
+.member-social-links li {
     width: 44px;
     height: 44px;
 }
 
-.social-links-icons{
+.social-link-icon{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -407,8 +407,8 @@ img {
     transition: color 300ms ease-in-out, background-color 300ms ease-in-out;
 }
 
-a.social-links-icons:hover,
-a.social-links-icons:focus {
+a.social-link-icon:hover,
+a.social-link-icon:focus {
     background-color: var(--blue);
     color: var(--white);
     outline: none;
@@ -463,7 +463,7 @@ a.social-links-icons:focus {
 
 /* button list in portfolio*/
 
-.button_list {
+.button-list {
     padding-top: 94px;
     margin-bottom: 50px;
     display: flex;
@@ -473,7 +473,7 @@ a.social-links-icons:focus {
 }
 
 
-    .button_list_item {
+    .button-list-item {
         text-align: center;
         padding: 6px 22px;
         border-radius: 4px;
@@ -484,7 +484,7 @@ a.social-links-icons:focus {
         transition: color 300ms ease-in-out, background-color 300ms ease-in-out, box-shadow 300ms ease-in-out;
         border: none;
     }
-    .button_list_item:hover, .button_list_item:focus {
+    .button-list-item:hover, .button-list-item:focus {
         color: var(--white);
         background-color: var(--blue);
         box-shadow: 0 4px 3px rgba(0, 0, 0, 0.2);
@@ -652,7 +652,7 @@ a.social-links-icons:focus {
     width: 44px;
 }
 
-.footer-social-links-icons{
+.footer-social-link-icon{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -666,8 +666,8 @@ a.social-links-icons:focus {
     transition: color 300ms ease-in-out, background-color 300ms ease-in-out;
 }
 
-.footer-social-links-icons:hover,
-.footer-social-links-icons:focus {
+.footer-social-link-icon:hover,
+.footer-social-link-icon:focus {
     color: var(--white);
     fill: currentColor;
     background-color: var(--blue);
@@ -694,7 +694,7 @@ a.social-links-icons:focus {
     flex-grow: 1;
 }
 
-.footer_box_second_plus_one {
+.footer-links-right {
         display: flex;
 }
 
@@ -739,7 +739,7 @@ a.social-links-icons:focus {
 
 
 
-.footer_button_svg {
+.footer-button-svg {
     margin-left: 10px;
     fill: currentColor;
         }
