--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -7,9 +7,55 @@
     padding-bottom: 60px;
     align-items: baseline;
     gap: 94px;
+    @include mobile {
+      flex-wrap: wrap;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    @include tablet {
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+    }
   }
 
-  &-logo {
+
+  .footer-links-right,
+  .footer-links-left,
+  .join{
+      @include mobile {
+        margin-left: 0;
+      }
+      @include tablet {
+        margin-left: 0;
+      }
+    &:nth-child(1) {
+      @include mobile {
+        text-align: center;
+      }
+      @include tablet {
+        text-align: center;
+      }
+    }
+    &:nth-child(2) {
+      @include mobile {
+        text-align: center;
+      }
+      @include tablet {
+        text-align: center;
+      }
+    }
+    &:nth-child(3) {
+      @include mobile {
+        text-align: center;
+      }
+      @include tablet {
+        text-align: center;
+      }
+    }
+  }
+
+  .footer-logo {
     color: $blue;
 
     > span {
@@ -39,7 +85,7 @@
     margin-bottom: 12px;
   }
 
-  &-text {
+  .footer-text {
     color: $white;
     font-weight: 700;
     letter-spacing: 0.03em;
@@ -58,7 +104,7 @@
       width: 44px;
     }
 
-    .footer-social-links-icons {
+    .footer-social-link-icon {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -99,21 +145,35 @@
     flex-grow: 1;
   }
 
-  .footer_box_second_plus_one {
+  .footer-form {
     display: flex;
+
+    @include tablet {
+      flex-direction: column;
+      gap: 20px;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+    @include mobile {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
   }
 
   .footer-label-input {
     flex-grow: 1;
   }
 
-  &_input {
+  .footer_input {
     width: 100%;
     background: rgba(33, 150, 243, 0);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: 1px rgba(255, 255, 255, 0.3) solid;
-    padding: 16px;
+    padding: 16px 0px 16px 16px;
 
     font-size: 16px;
     line-height: 1.25;
@@ -124,14 +184,20 @@
     &:hover {
       outline-color: $blue;
     }
+    @include tablet {
+      width: 450px;
+    }
+    @include mobile {
+      width: 450px;
+    }
   }
 
-  &_button {
+  .footer_button {
     background: $blue;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: none;
-    padding: 10px 28px;
+    padding: 12px 28px;
     margin-left: 12px;
 
     font-size: 16px;
@@ -147,17 +213,17 @@
     &:focus {
       background-color: $light_blue;
     }
+    @include tablet {
+      margin-left: 0;
+    }
+    @include mobile {
+      margin-left: 0;
+    }
   }
 
-  .footer_button_svg {
+  .footer-button-svg {
     margin-left: 10px;
     fill: currentColor;
   }
 
 }
-
-
-
-
-
-
