--- a/src/scss/components/index/_detail.scss
+++ b/src/scss/components/index/_detail.scss
@@ -1,15 +1,30 @@
 .detail {
   padding-top: 94px;
   padding-bottom: 94px;
+  @include mobile {
+    padding: 60px 0;
+  }
+  @include tablet {
+    padding: 60px 0;
+  }
+  .detail-list-element {
+    max-width:  350px;
+    @include mobile {
+      max-width: 100%;
+    }
+  }
 
   .detail-list {
     gap: 30px;
     display: flex;
-
-    .detail-list-element {
-      max-width: 270px;
+    @include tablet {
+      flex-wrap: wrap;
     }
-
+    @include mobile {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+  }
     .detail-list-icon {
       display: flex;
       justify-content: center;
@@ -18,6 +33,12 @@
       margin-bottom: 30px;
       background-color: $like_white;
       border-radius: 4px;
+      @include tablet {
+        padding: 25px 142px;
+      }
+      @include mobile {
+        padding: 25px 190px;
+      }
     }
 
     .detail-list-title {
@@ -27,12 +48,16 @@
       letter-spacing: 0.03em;
       text-transform: uppercase;
       margin-bottom: 10px;
+      @include mobile{
+        text-align: center;
+      }
     }
 
     .detail-list-text {
-      color: var(--grey);
+      color: $grey;
       line-height: 1.71;
       letter-spacing: 0.03em;
     }
   }
-}
+
+
