--- a/src/scss/components/index/_hero.scss
+++ b/src/scss/components/index/_hero.scss
@@ -9,8 +9,15 @@
   display: flex;
   align-items: center;
   text-align: center;
+  @include mobile {
+
+    height: auto;
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+
 }
-.business-section-title {
+.hero-section-title {
   margin: auto;
   color: $white;
   text-align: center;
@@ -21,7 +28,7 @@
   text-transform: uppercase;
   max-width: 696px;
 }
-.business-section-button {
+.hero-section-button {
   color: $white;
   border: none;
   font-size: 16px;
