--- a/src/scss/components/index/_modal.scss
+++ b/src/scss/components/index/_modal.scss
@@ -42,6 +42,12 @@
   0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  @include tablet {
+    min-width: 450px;
+  }
+  @include mobile{
+    min-width: 92.5%;
+  }
 }
 
 .close-modal-button {
@@ -87,6 +93,10 @@
   .label-text {
     display: block;
     margin-bottom: 4px;
+    @include tablet {
+      font-size: 12px;
+      white-space: nowrap;
+    }
   }
 
   .form-li {
@@ -160,6 +170,9 @@
   .form-a {
     text-decoration: underline;
     color: $blue;
+    @include tablet {
+      font-size: 12px;
+    }
   }
 
   .label_license {
