--- a/src/scss/components/index/_team.scss
+++ b/src/scss/components/index/_team.scss
@@ -3,6 +3,12 @@
   text-align: center;
   padding-bottom: 94px;
   padding-top: 94px;
+  @include mobile {
+    padding: 60px 0;
+  }
+  @include tablet {
+    padding: 60px 0;
+  }
 
   .team-title {
     color: $black;
@@ -11,6 +17,12 @@
     font-size: 36px;
     letter-spacing: 0.03em;
     margin-bottom: 50px;
+    @include mobile{
+      margin-bottom: 30px;
+    }
+    @include tablet{
+      margin-bottom: 30px;
+    }
   }
 
   .team-list {
@@ -18,16 +30,33 @@
     justify-content: center;
     gap: 30px;
     flex-wrap: nowrap;
+    @include tablet {
+      flex-wrap: wrap;
+    }
+    @include mobile {
+      flex-wrap: wrap;
+    }
+  }
+  &__img {
+    @include tablet {
+      width: 354px;
+      height: 374px;
+    }
+    @include mobile {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
-.members {
+
+.member {
   border-radius: 0px 0px 4px 4px;
   background: $white;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12),
   0px 1px 1px 0px rgba(0, 0, 0, 0.14),
   0px 2px 1px 0px rgba(0, 0, 0, 0.20);
 
-  .members-div-text {
+  .member-div-text {
     padding: 30px;
   }
 
@@ -46,17 +75,18 @@
     letter-spacing: 0.03em;
   }
 
-  .members-social-links {
+  .member-social-links {
     display: flex;
     width: 100%;
     justify-content: space-between;
     margin-top: 16px;
 
+
     li {
       width: 44px;
       height: 44px;
 
-      .social-links-icons {
+      .social-link-icon {
         display: flex;
         justify-content: center;
         align-items: center;
