--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -11,3 +11,42 @@ $fonts: "Roboto";
 //// Font
 //$raleway_font: "Raleway", sans-serif;
 //$roboto_font: "Roboto", sans-serif;
+
+@mixin font($cl, $fs, $fw, $ls, $lh: normal) {
+  color: $cl;
+  font-size: $fs;
+  font-weight: $fw;
+  line-height: $lh;
+  letter-spacing: $ls;
+  word-wrap: break-word;
+
+  font-family: $roboto_font;
+}
+
+@mixin button($bg, $bs: 0px 4px 4px rgba(0, 0, 0, 0.15)) {
+  background: $bg;
+  height: 100%;
+  text-decoration: none;
+  box-shadow: $bs;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+}
+
+@mixin mobile {
+  @media screen and (max-width: 767.9px) and (min-width: 0) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media screen and (min-width: 768px) and (max-width: 1199.9px) {
+    @content;
+  }
+}
+
+@mixin desktop {
+  @media screen and (min-width: 1200px) {
+    @content;
+  }
+}
