--- a/src/scss/components/portlofio/_project-list.scss
+++ b/src/scss/components/portlofio/_project-list.scss
@@ -16,22 +16,17 @@
 .project-list-element {
   border: 1px solid #eeeeee;
   background: $white;
-  max-width: 370px;
   @include tablet {
     gap: 24px;
-    justify-content: start;
+    //justify-content: start;
     max-height: 100%;
   }
-  @include tablet {
-    max-width: 345px;
-  }
   @include mobile {
-    max-width: 450px;
-    max-height: 404px;
-    margin: 0px;
+    width: 100%;
+    margin: 0;
   }
   a {
-    display: inline-block;
+    display: block;
     transition: box-shadow 300ms ease-in-out;
 
     &:hover,
@@ -60,12 +55,8 @@
 
 .project-list-container {
   position: relative;
-  display: inline-block;
+  display: block;
   overflow: hidden;
-  @include mobile {
-    width: 450px;
-    height: 294px;
-  }
 
   .project-list-container-text {
     position: absolute;
