change footer/header and detail

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -153,6 +153,10 @@
       width: 100%;
       max-width: 450px;
     }
+    @include tablet {
+      width: 100%;
+      max-width: 450px;
+    }
     flex-grow: 1;
   }
 
