--- a/src/scss/components/index/_detail.scss
+++ b/src/scss/components/index/_detail.scss
@@ -9,6 +9,8 @@
   }
   .detail-list-element {
     max-width:  350px;
+    flex: 1;
+    min-width: 290px;
     @include mobile {
       max-width: 100%;
     }
