--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -11,56 +11,30 @@
     padding: 10px 0;
   }
 
-
-  .container,
-  .link-list,
-  .contact-info{
-    justify-content: space-between;
-  }
-
   .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
-      @include mobile {
-        max-width: 100%;
-      }
-      @include tablet {
-        max-width: 730px;
-        padding: 0;
-        width: 100%;
-      }
-      @include desktop {
-        max-width: 1200px;
-        padding: 0;
-      }
 
+    @include desktop {
+      justify-content: flex-start;
+    }
   }
 
   nav {
-    margin-left: 93px;
-    @include mobile{
-      margin-left: 0;
+    @include desktop {
+      margin-left: 93px;
     }
-
   }
 }
-
-
 
 .link-list {
   display: flex;
   align-items: center;
   list-style: none;
   gap: 50px;
-  @include tablet {
-    display: flex;
-    padding-right: 80px;
-  }
+
   @include mobile {
-    display: none;
-  }
-  @media screen and (max-width: 479px) {
     display: none;
   }
 
@@ -102,23 +76,19 @@
 .contact-info {
   display: flex;
   align-items: center;
-  margin-left: auto;
   gap: 40px;
   color: $grey;
   font-weight: 500;
   letter-spacing: 0.02em;
+  @include desktop {
+    margin-left: auto;
+  }
   @include tablet {
-    display: flex;
-    margin-left: 0;
-    margin-right: 0px;
     align-items: flex-start;
     flex-direction: column;
     gap: 10px;
   }
   @include mobile {
-    display: none;
-  }
-  @media screen and (max-width: 479px) {
     display: none;
   }
 }
