color of buttons?

--- a/src/scss/components/portlofio/_button-list.scss
+++ b/src/scss/components/portlofio/_button-list.scss
@@ -22,6 +22,7 @@
 
   .button-list-item {
     text-align: center;
+    color: $black;
     padding: 6px 22px;
     border-radius: 4px;
     font-size: 16px;
