--- a/src/scss/components/index/_modal.scss
+++ b/src/scss/components/index/_modal.scss
@@ -1,4 +1,4 @@
-.visually-hidden {
+.visually-hidden, {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -19,7 +19,7 @@
   opacity: 1;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  z-index: 1;
+  z-index: 1000;
 
   &.is-hidden {
     opacity: 0;
@@ -28,9 +28,8 @@
     }
   }
 
-
 .modal-window {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -44,6 +43,7 @@
   0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 1001;
   @include tablet {
     min-width: 450px;
   }
@@ -60,6 +60,7 @@
   width: 30px;
   height: 30px;
   align-items: center;
+  justify-content: center;
   border-radius: 50%;
   background-color: $white;
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -72,8 +73,11 @@
 }
 
 .icon-modal {
-  width: 18px;
-  height: 18px;
+  min-width: 18px;
+  min-height: 18px;
+  justify-items: center;
+  padding-right: 0;
+  padding-left: 0;
   fill: $black;
   transition: fill 0.5s;
 }
@@ -186,7 +190,7 @@
     appearance: none;
     border: $black 1px solid;
     height: 15px;
-    width: 16px;
+    min-width: 16px;
     color: $white;
     border-radius: 2px;
     transition-duration: 0.5s;
